// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Allows override of blocksConfig 1`] = `
<div>
  <div>
    <div>
      a
       - 
      a
    </div>
    <div>
      b
       - 
      b
    </div>
  </div>
</div>
`;

exports[`Provides path to blocks 1`] = `
<div>
  <div>
    <div>
      id: 
      a
       - text: 
      bar
       - path: 
      /foo
    </div>
  </div>
</div>
`;
